--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "devDependencies": {
     "@astrojs/svelte": "^0.1.3",
     "astro": "^1.0.0-beta.37",
+    "svelte": "^3.48.0",
+    "tailwindcss": "^3.0.24"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.7",
+    "daisyui": "^2.15.2",
     "svelte": "^3.48.0"
   }
 }
